--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
 @use '../src/assets/styles/common' as *;
 
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
