--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -2,7 +2,68 @@
 
 .container {
   width: 100%;
-  
+  height: 100dvh;
   min-width: 375px;
-  border: 1px solid rgb(47, 255, 0);
+  border: 1px solid rgb(255, 204, 0);
+  button{
+    max-width: 15vw;
+    padding: 8px;
+    margin: 5px;
+  }
+  td,th{
+    border: 1px solid salmon;
+    font-size: 1.5vw;
+    
+  }
+}
+
+.ControlPanel{
+  button{
+    max-width: 3vw;
+  }
+}
+
+
+
+//MOBILE
+
+@mixin breakPoint($point) {
+  @if $point ==phone {
+    @media (max-width: 576px) {
+      @content;
+    }
+  }
+
+  @else if $point ==tablet {
+    @media (max-width: 834px) {
+      @content;
+    }
+  }
+
+  @else if $point ==laptop {
+    @media (max-width: 1024px) {
+      @content;
+    }
+  }
+
+  @else if $point ==desktop {
+    @media (max-width: 1440px) {
+      @content;
+    }
+  }
+}
+
+@mixin mobileClick() {
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  @media (hover: none) and (pointer: coarse) {
+    &:active {
+      transform: scale(1.008);
+      opacity: 0.5;
+    }
+  }
 }
