--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -1,5 +1,4 @@
-//MOBILE
-
+//MOBILE===
 @mixin breakPoint($point) {
   @if $point ==phone {
     @media (max-width: 576px) {
@@ -40,72 +39,51 @@
     }
   }
 }
+//MOBILE===
+
 .container {
   width: 100%;
   height: 100dvh;
   min-width: 375px;
-  border: 1px solid rgb(255, 204, 0);
-  
+      p {
+          width: '20vw';
+          text-align: start;
+        }
   button {
     @include mobileClick();
     font-size: 1.5vw;
     max-width: 15vw;
     height: 4vh;
-    padding: 8px;
-    margin: 5px;
+    padding: 8px 5px;
+    margin: 5px 8px;
   }
 
   td,
   th {
-    border: 1px solid salmon;
     font-size: 1.6vw;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
   }
 }
-
-
 
 table {
   thead {
-    th {
 
-
-      &:first-of-type {
-        width: 5vw;
-      }
-
-      &:last-of-type {
-        width: 8vw;
-      }
-
-      &:not(:first-of-type):not(:last-of-type) {
-        width: 15vw;
-      }
-    }
-  }
-
-  tbody {
+    th,
     td {
-      text-align: center;
-
       &:first-of-type {
         width: 5vw;
-
       }
 
       &:last-of-type {
         width: 8vw;
-
       }
 
       &:not(:first-of-type):not(:last-of-type) {
         width: 15vw;
-
       }
     }
   }
-}
 
+}
